--- a/index.html
+++ b/index.html
@@ -1,9 +1,33 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <h1></h1>
-        <script src="index.js"></script>
-    </body>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Karla:wght@400;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div>
+      <h1>
+        Generate a <br />
+        <span class="coloured">random password</span>
+      </h1>
+      <p>Never use an insecure password again.</p>
+      <button>Generate passwords</button>
+      <hr />
+      <div id="password-area">
+        <div id="password1" class="password"></div>
+        <div id="password2" class="password"></div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
