--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="coloured">random password</span>
       </h1>
       <p>Never use an insecure password again.</p>
-      <button>Generate passwords</button>
+      <button id="generate-password">Generate passwords</button>
       <hr />
       <div id="password-area">
         <div id="password1" class="password"></div>
